2009-06-25  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ListBox/ListBoxItem.cs: Call the base
	  InvokeLoaded method.

2009-06-24  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ListBox/ListBox.cs: Add another method to
	  selector to allow subclasses to easily set the IsSelected
	  property when the SelectedItem changes.

2009-06-24  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ListBox/ListBoxItem.cs: The only way to get the
	  initial focus correct for the drop down list in ComboBox is
	  if it receives notification of when its ComboBoxItems are
	  loaded.

2009-06-24  Brad Taylor  <brad@getcoded.net>

	* RuntimeControls/SilverlightControls/RadioButton.cs: Return new
	RadioButtonAutomationPeer.

2009-06-23  Brad Taylor  <brad@getcoded.net>

	* RuntimeControls/SilverlightControls/CheckBox.cs: Return new
	CheckBoxAutomationPeer.

2009-06-22  Brad Taylor  <brad@getcoded.net>

	* RuntimeControls/SilverlightControls/Primitives/ToggleButton.cs:
	Return a new ToggleButtonAutomationPeer.

2009-06-11  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* SDKControls/Data/src/Properties/AssemblyInfo.cs:
	MS' tests are using a test binary with a different public key,
	expose our internals to that binary too.

2009-06-11  Mario Carrion  <mcarrion@novell.com>

	* Controls/Src/ListBox/ListBox.cs, 
	Controls/Src/ListBox/ListBoxItem.cs: Method overridden 
	OnCreateAutomationPeer.

2009-05-22  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/Common/KeyboardNavigation.cs
	* Controls/Src/ListBox/ListBox.cs
	* Controls/Src/ListBox/ListBoxItem.cs
	* Controls/Src/ScrollViewer/ScrollViewer.cs
	* Controls/Src/ToolTip/ToolTip.cs
	* Controls/Src/ToolTip/ToolTipService.cs
	* RuntimeControls/SilverlightControls/HyperlinkButton.cs
	* RuntimeControls/SilverlightControls/Primitives/ButtonBase.cs
	* RuntimeControls/SilverlightControls/Primitives/RangeBase.cs
	* RuntimeControls/SilverlightControls/Primitives/RepeatButton.cs